--- a/MyReddit.API/MyReddit.API.csproj
+++ b/MyReddit.API/MyReddit.API.csproj
@@ -17,12 +17,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyReddit.Application\MyReddit.Application.csproj" />
     <ProjectReference Include="..\MyReddit.DataAccess\MyReddit.DataAccess.csproj" />
+    <ProjectReference Include="..\MyReddit.Infrastructure\MyReddit.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
