--- a/MyReddit.API/appsettings.json
+++ b/MyReddit.API/appsettings.json
@@ -1,9 +1,39 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "Seq",
+        "Args": { "serverUrl": "http://localhost:5341" }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
-  "AllowedHosts": "*"
+  "JwtOptions": {
+    "SecretKey": "secretkeysecretkeysecretkeysecretkey",
+    "ExpiresHours": "12"
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyRedditDbContext": "User ID=postgres;Password=123;Host=localhost;Port=5432;Database=myreddit;"
+  },
+  "AuthorizationOptions": {
+    "RolePermissions": [
+      {
+        "Role": "Admin",
+        "Permission": [ "Create", "Read", "Update", "Delete" ]
+      },
+      {
+        "Role": "User",
+        "Permission": [ "Read" ]
+      }
+    ]
+  }
 }
